--- a/domox-webapp/src/main/resources/static/index.html
+++ b/domox-webapp/src/main/resources/static/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div id="wrapper">
-            <img alt="Isis Logo" src="images/apache-isis/logo.png" />
+            <img alt="Causeway Logo" src="images/apache-causeway/logo.png" />
              
             <p>
-                This is a simple <a href="http://causeway.apache.org">Apache Isis</a> application, structured so it can be
+                This is a simple <a href="http://causeway.apache.org">Apache Causeway</a> application, structured so it can be
                 used as a starting point for developing your own applications.
                 <br/>
             </p>
@@ -23,7 +23,7 @@
                         <b><a href="wicket/">Generic UI (Wicket)</a></b>
                     </p>
                     <p>
-                        provides access to a generic UI for end-users, Apache Isis'
+                        provides access to a generic UI for end-users, Apache Causeway'
                         <a href="http://causeway.apache.org/guides/ugvw/ugvw.html" target="_blank">Wicket Viewer</a>.
                         As its name suggests, this viewer is built on top of
                         <a href="http://wicket.apache.org" target="_blank">Apache Wicket</a>&trade;.
