JavaCode generation from ClassCdd

--- a/domox-domain/src/test/resources/Requirements Document Example.html
+++ b/domox-domain/src/test/resources/Requirements Document Example.html
@@ -239,21 +239,21 @@ a technical requirement or constraint on the overall characteristics
 of the system.  Each objective is measurable.
 </li><li>Section 4: Context Model<br>
 This section gives a text description of the goal of the system, and a
-pictorial description of the scope of the system in a context diagram.
+pictorial description of the scope of the system in a context generate.
 Those entities outside the system that interact with the system are described.
 </li><li>Section 5: Use Case Model<br>
 The specific behavioral requirements of the system are detailed in
 a series of use cases.  Each use case accomplishes a business task
 and shows the interaction between the system and some outside actor.
-Each use case is described with both text and an interaction diagram.
+Each use case is described with both text and an interaction generate.
 An interface prototype is also shown.
-The system use case diagram depicts the interactions between all
+The system use case generate depicts the interactions between all
 use cases and system actors.
 </li><li>Section 6: Class Model<br>
 A class is a collection of objects in the system that have the
 same data and behavior.
 All analysis classes and their relationships are shown on the
-class diagram.
+class generate.
 </li><li>Section 7: An appendix containing a glossary that<br>
 defines terms specific to this project
 
